--- a/Dennis Allison Tiny Basic/index.html
+++ b/Dennis Allison Tiny Basic/index.html
@@ -1,5 +1,5 @@
 <h1>Dennis Allison Tiny Basic</h1>
-<img src="/preview/Dennis Allison Tiny Basic.png" alt="Preview">
+<img src="/preview/Dennis Allison Tiny BASIC.png" alt="Preview">
 <details>
   <summary>B</summary>
   <a href="/games/Dennis Allison Tiny Basic/B/Bowling (Unknown).bas" download>Bowling (Unknown).bas</a><br>
