--- a/eChat eMaps/index.html
+++ b/eChat eMaps/index.html
@@ -4,3 +4,7 @@
   <summary>D</summary>
   <a href="/games/eChat eMaps/D/Derevnia (Unknown).emap" download>Derevnia (Unknown).emap</a><br>
 </details>
+<details>
+  <summary>G</summary>
+  <a href="/games/eChat eMaps/G/Gorod (Unknown).emap" download>Gorod (Unknown).emap</a><br>
+</details>
