--- a/Nintendo Entertainment System/index.html
+++ b/Nintendo Entertainment System/index.html
@@ -3,4 +3,5 @@
 <details>
   <summary>2</summary>
   <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public).nes" download>2009 Fireworks Demo by Matrixz (Public).nes</a><br>
+  <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public Patched).nes" download>2009 Fireworks Demo by Matrixz (Public Patched).nes</a><br>
 </details>
