--- a/Nintendo Entertainment System/index.html
+++ b/Nintendo Entertainment System/index.html
@@ -2,6 +2,6 @@
 <img src="/preview/Nintendo Entertainment System.png" alt="Preview">
 <details>
   <summary>2</summary>
-  <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public).nes" download>2009 Fireworks Demo by Matrixz (Public).nes</a><br>
-  <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public Patched).nes" download>2009 Fireworks Demo by Matrixz (Public Patched).nes</a><br>
+  <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public).nes" download>2009 Fireworks Demo by Matrixz (Public).nes</a><a href="/about/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public).nes">About</a><br>
+  <a href="/games/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public Patched).nes" download>2009 Fireworks Demo by Matrixz (Public Patched).nes</a><a href="/about/Nintendo Entertainment System/2/2009 Fireworks Demo by Matrixz (Public Patched).nes">About</a><br>
 </details>
