--- a/Dennis Allison Tiny Basic/index.html
+++ b/Dennis Allison Tiny Basic/index.html
@@ -2,5 +2,5 @@
 <img src="/preview/Dennis Allison Tiny BASIC.png" alt="Preview">
 <details>
   <summary>B</summary>
-  <a href="/games/Dennis Allison Tiny Basic/B/Bowling (Unknown).bas" download>Bowling (Unknown).bas</a><br>
+  <a href="/games/Dennis Allison Tiny Basic/B/Bowling (Unknown).bas" download>Bowling (Unknown).bas</a><a href="/about/Dennis Allison Tiny Basic/B/Bowling (Unknown).bas">About</a><br>
 </details>
