--- a/public/filenamesyntax.html
+++ b/public/filenamesyntax.html
@@ -28,7 +28,7 @@
         <h2>Typical name</h2>
 
         <p>Name of file is just</p>
-        <code>Your game name (Tags).extension</code>
+        <code>/Platform full name/First letter/Your game name (Tags).extension</code>
         <p>It's easy! Is'nt it?</p>
 
         <h2>Tags</h2>
